--- a/wp-content/themes/mixx_sozai/style.css
+++ b/wp-content/themes/mixx_sozai/style.css
@@ -9683,6 +9683,6 @@ a, button {
   font-size: 15px;
   font-style: inherit; }
 
-.uk-button {
+.uk-button:not(.uk-button-text):not(.uk-button-link) {
   border-radius: 4px;
   border-bottom: 4px solid #487680; }
